# dice_roller_rs

./: Cargo.toml  README.md
examples/: basic_usage.rs
src/: lib.rs
